Implemented PS-7012 (Merge MySQL 5.6.49) (docs)
https://jira.percona.com/browse/PS-7012
***
Updated man pages from MySQL Server 5.6.49 source tarball.
***
Updated 'scripts/fill_help_tables.sql' from MySQL Server 5.6.49 source tarball.

--- a/man/mysql_find_rows.1
+++ b/man/mysql_find_rows.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysql_find_rows\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQL_FIND_ROWS\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQL_FIND_ROWS\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -103,7 +103,6 @@ supports the following options:
 .\}
 \fB\-\-help\fR,
 \fB\-\-Information\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -116,7 +115,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-regexp=\fR\fB\fIpattern\fR\fR
-.sp
 Display queries that match the pattern\&.
 .RE
 .sp
@@ -129,7 +127,6 @@ Display queries that match the pattern\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-rows=\fR\fB\fIN\fR\fR
-.sp
 Quit after displaying
 \fIN\fR
 queries\&.
@@ -144,7 +141,6 @@ queries\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-skip\-use\-db\fR
-.sp
 Do not include
 USE \fIdb_name\fR
 statements in the output\&.
@@ -159,13 +155,12 @@ statements in the output\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-start_row=\fR\fB\fIN\fR\fR
-.sp
 Start output from this row\&.
 .RE
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
