--- a/man/mysql_setpermission.1
+++ b/man/mysql_setpermission.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysql_setpermission\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQL_SETPERMISSION\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQL_SETPERMISSION\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -100,7 +100,6 @@ supports the following options:
 .IP \(bu 2.3
 .\}
 \fB\-\-help\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -113,7 +112,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-host=\fR\fB\fIhost_name\fR\fR
-.sp
 Connect to the MySQL server on the given host\&.
 .RE
 .sp
@@ -126,7 +124,6 @@ Connect to the MySQL server on the given host\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-password=\fR\fB\fIpassword\fR\fR
-.sp
 The password to use when connecting to the server\&. The password value is not optional for this option, unlike for other MySQL programs\&.
 .sp
 Specifying a password on the command line should be considered insecure\&. To avoid giving the password on the command line, use an option file\&. See
@@ -142,7 +139,6 @@ Section\ \&6.1.2.1, \(lqEnd-User Guidelines for Password Security\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-port=\fR\fB\fIport_num\fR\fR
-.sp
 The TCP/IP port number to use for the connection\&.
 .RE
 .sp
@@ -155,7 +151,6 @@ The TCP/IP port number to use for the connection\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-socket=\fR\fB\fIpath\fR\fR
-.sp
 For connections to
 localhost, the Unix socket file to use\&.
 .RE
@@ -169,13 +164,12 @@ localhost, the Unix socket file to use\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-user=\fR\fB\fIuser_name\fR\fR
-.sp
 The MySQL user name to use when connecting to the server\&.
 .RE
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
