--- a/man/mysqlbinlog.1
+++ b/man/mysqlbinlog.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysqlbinlog\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQLBINLOG\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQLBINLOG\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -173,7 +173,6 @@ Section\ \&4.2.2.2, \(lqUsing Option Files\(rq\&.
 .\}
 \fB\-\-help\fR,
 \fB\-?\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -186,7 +185,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-base64\-output=\fR\fB\fIvalue\fR\fR
-.sp
 This option determines when events should be displayed encoded as base\-64 strings using
 BINLOG
 statements\&. The option has these permissible values (not case\-sensitive):
@@ -285,7 +283,6 @@ the section called \(lqMYSQLBINLOG ROW EVENT DISPLAY\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-bind\-address=\fR\fB\fIip_address\fR\fR
-.sp
 On a computer having multiple network interfaces, use this option to select which interface to use for connecting to the MySQL server\&.
 .RE
 .sp
@@ -307,33 +304,33 @@ T}:T{
 Value
 T}
 .T&
-l l
-l l
-l l
-l l
-l l.
+lB l
+lB l
+lB l
+lB l
+lB l.
 T{
-\fBCommand-Line Format\fR
+Command-Line Format
 T}:T{
 --binlog-row-event-max-size=#
 T}
 T{
-\fBType\fR
+Type
 T}:T{
 Numeric
 T}
 T{
-\fBDefault Value\fR
+Default Value
 T}:T{
 4294967040
 T}
 T{
-\fBMinimum Value\fR
+Minimum Value
 T}:T{
 256
 T}
 T{
-\fBMaximum Value\fR
+Maximum Value
 T}:T{
 18446744073709547520
 T}
@@ -351,7 +348,6 @@ Specify the maximum size of a row\-based binary log event, in bytes\&. Rows are 
 .IP \(bu 2.3
 .\}
 \fB\-\-character\-sets\-dir=\fR\fB\fIdir_name\fR\fR
-.sp
 The directory where character sets are installed\&. See
 Section\ \&10.15, \(lqCharacter Set Configuration\(rq\&.
 .RE
@@ -365,7 +361,6 @@ Section\ \&10.15, \(lqCharacter Set Configuration\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-connection\-server\-id=\fR\fB\fIserver_id\fR\fR
-.sp
 This option is used to test a MySQL server for support of the
 BINLOG_DUMP_NON_BLOCK
 connection flag, which was inadvertently removed in MySQL 5\&.6\&.5, and restored in MySQL 5\&.6\&.20 (Bug #18000079, Bug #71178)\&. It is not required for normal operation\&.
@@ -389,7 +384,6 @@ This option was added in MySQL 5\&.6\&.20\&.
 .\}
 \fB\-\-database=\fR\fB\fIdb_name\fR\fR,
 \fB\-d \fR\fB\fIdb_name\fR\fR
-.sp
 This option causes
 \fBmysqlbinlog\fR
 to output entries from the binary log (local log only) that occur while
@@ -535,7 +529,6 @@ USE\&. (In particular, no cross\-database updates should be used\&.)
 .\}
 \fB\-\-debug[=\fR\fB\fIdebug_options\fR\fR\fB]\fR,
 \fB\-# [\fR\fB\fIdebug_options\fR\fR\fB]\fR
-.sp
 Write a debugging log\&. A typical
 \fIdebug_options\fR
 string is
@@ -557,7 +550,6 @@ built using this option\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-debug\-check\fR
-.sp
 Print some debugging information when the program exits\&.
 .sp
 This option is available only if MySQL was built using
@@ -575,7 +567,6 @@ built using this option\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-debug\-info\fR
-.sp
 Print debugging information and memory and CPU usage statistics when the program exits\&.
 .sp
 This option is available only if MySQL was built using
@@ -593,7 +584,6 @@ built using this option\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-default\-auth=\fR\fB\fIplugin\fR\fR
-.sp
 A hint about which client\-side authentication plugin to use\&. See
 Section\ \&6.2.11, \(lqPluggable Authentication\(rq\&.
 .RE
@@ -607,7 +597,6 @@ Section\ \&6.2.11, \(lqPluggable Authentication\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-defaults\-extra\-file=\fR\fB\fIfile_name\fR\fR
-.sp
 Read this option file after the global option file but (on Unix) before the user option file\&. If the file does not exist or is otherwise inaccessible, an error occurs\&.
 \fIfile_name\fR
 is interpreted relative to the current directory if given as a relative path name rather than a full path name\&.
@@ -625,7 +614,6 @@ Section\ \&4.2.2.3, \(lqCommand-Line Options that Affect Option-File Handling\(r
 .IP \(bu 2.3
 .\}
 \fB\-\-defaults\-file=\fR\fB\fIfile_name\fR\fR
-.sp
 Use only the given option file\&. If the file does not exist or is otherwise inaccessible, an error occurs\&.
 \fIfile_name\fR
 is interpreted relative to the current directory if given as a relative path name rather than a full path name\&.
@@ -647,7 +635,6 @@ Exception: Even with
 .IP \(bu 2.3
 .\}
 \fB\-\-defaults\-group\-suffix=\fR\fB\fIstr\fR\fR
-.sp
 Read not only the usual option groups, but also groups with the usual names and a suffix of
 \fIstr\fR\&. For example,
 \fBmysqlbinlog\fR
@@ -679,7 +666,6 @@ Section\ \&4.2.2.3, \(lqCommand-Line Options that Affect Option-File Handling\(r
 .\}
 \fB\-\-disable\-log\-bin\fR,
 \fB\-D\fR
-.sp
 Disable binary logging\&. This is useful for avoiding an endless loop if you use the
 \fB\-\-to\-last\-log\fR
 option and are sending the output to the same MySQL server\&. This option also is useful when restoring after a crash to avoid duplication of the statements you have logged\&.
@@ -703,7 +689,6 @@ Section\ \&5.1.8.1, \(lqSystem Variable Privileges\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-exclude\-gtids=\fR\fB\fIgtid_set\fR\fR
-.sp
 Do not display any of the groups listed in the
 \fIgtid_set\fR\&.
 .RE
@@ -718,7 +703,6 @@ Do not display any of the groups listed in the
 .\}
 \fB\-\-force\-if\-open\fR,
 \fB\-F\fR
-.sp
 Read binary log files even if they are open or were not closed properly\&.
 .RE
 .sp
@@ -732,7 +716,6 @@ Read binary log files even if they are open or were not closed properly\&.
 .\}
 \fB\-\-force\-read\fR,
 \fB\-f\fR
-.sp
 With this option, if
 \fBmysqlbinlog\fR
 reads a binary log event that it does not recognize, it prints a warning, ignores the event, and continues\&. Without this option,
@@ -750,7 +733,6 @@ stops if it reads such an event\&.
 .\}
 \fB\-\-hexdump\fR,
 \fB\-H\fR
-.sp
 Display a hex dump of the log in comments, as described in
 the section called \(lqMYSQLBINLOG HEX DUMP FORMAT\(rq\&. The hex output can be helpful for replication debugging\&.
 .RE
@@ -765,7 +747,6 @@ the section called \(lqMYSQLBINLOG HEX DUMP FORMAT\(rq\&. The hex output can be 
 .\}
 \fB\-\-host=\fR\fB\fIhost_name\fR\fR,
 \fB\-h \fR\fB\fIhost_name\fR\fR
-.sp
 Get the binary log from the MySQL server on the given host\&.
 .RE
 .sp
@@ -778,7 +759,6 @@ Get the binary log from the MySQL server on the given host\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-include\-gtids=\fR\fB\fIgtid_set\fR\fR
-.sp
 Display only the groups listed in the
 \fIgtid_set\fR\&.
 .RE
@@ -793,10 +773,19 @@ Display only the groups listed in the
 .\}
 \fB\-\-local\-load=\fR\fB\fIdir_name\fR\fR,
 \fB\-l \fR\fB\fIdir_name\fR\fR
-.sp
-Prepare local temporary files for
+For data loading operations corresponding to
 LOAD DATA
-in the specified directory\&.
+statements,
+\fBmysqlbinlog\fR
+extracts the files from the binary log events, writes them as temporary ffiles to the local file system, and writes
+LOAD DATA LOCAL
+statements to cause the files to be loaded\&. By default,
+\fBmysqlbinlog\fR
+writes these temporary files to an operating system\-specific directory\&. The
+\fB\-\-local\-load\fR
+option can be used to explicitly specify the directory where
+\fBmysqlbinlog\fR
+should prepare local temporary files\&.
 .if n \{\
 .sp
 .\}
@@ -825,7 +814,6 @@ or any other MySQL program\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-login\-path=\fR\fB\fIname\fR\fR
-.sp
 Read options from the named login path in the
 \&.mylogin\&.cnf
 login path file\&. A
@@ -848,7 +836,6 @@ Section\ \&4.2.2.3, \(lqCommand-Line Options that Affect Option-File Handling\(r
 .IP \(bu 2.3
 .\}
 \fB\-\-no\-defaults\fR
-.sp
 Do not read any option files\&. If program startup fails due to reading unknown options from an option file,
 \fB\-\-no\-defaults\fR
 can be used to prevent them from being read\&.
@@ -877,7 +864,6 @@ Section\ \&4.2.2.3, \(lqCommand-Line Options that Affect Option-File Handling\(r
 .\}
 \fB\-\-offset=\fR\fB\fIN\fR\fR,
 \fB\-o \fR\fB\fIN\fR\fR
-.sp
 Skip the first
 \fIN\fR
 entries in the log\&.
@@ -905,7 +891,6 @@ Specify the number of open file descriptors to reserve\&.
 .\}
 \fB\-\-password[=\fR\fB\fIpassword\fR\fR\fB]\fR,
 \fB\-p[\fR\fB\fIpassword\fR\fR\fB]\fR
-.sp
 The password of the MySQL account used for connecting to the server\&. The password value is optional\&. If not given,
 \fBmysqlbinlog\fR
 prompts for one\&. If given, there must be
@@ -935,7 +920,6 @@ option\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-plugin\-dir=\fR\fB\fIdir_name\fR\fR
-.sp
 The directory in which to look for plugins\&. Specify this option if the
 \fB\-\-default\-auth\fR
 option is used to specify an authentication plugin but
@@ -954,7 +938,6 @@ Section\ \&6.2.11, \(lqPluggable Authentication\(rq\&.
 .\}
 \fB\-\-port=\fR\fB\fIport_num\fR\fR,
 \fB\-P \fR\fB\fIport_num\fR\fR
-.sp
 The TCP/IP port number to use for connecting to a remote server\&.
 .RE
 .sp
@@ -967,7 +950,6 @@ The TCP/IP port number to use for connecting to a remote server\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-print\-defaults\fR
-.sp
 Print the program name and all options that it gets from option files\&.
 .sp
 For additional information about this and other option\-file options, see
@@ -983,7 +965,6 @@ Section\ \&4.2.2.3, \(lqCommand-Line Options that Affect Option-File Handling\(r
 .IP \(bu 2.3
 .\}
 \fB\-\-protocol={TCP|SOCKET|PIPE|MEMORY}\fR
-.sp
 The connection protocol to use for connecting to the server\&. It is useful when the other connection parameters normally result in use of a protocol other than the one you want\&. For details on the permissible values, see
 Section\ \&4.2.4, \(lqConnecting to the MySQL Server Using Command Options\(rq\&.
 .RE
@@ -997,7 +978,6 @@ Section\ \&4.2.4, \(lqConnecting to the MySQL Server Using Command Options\(rq\&
 .IP \(bu 2.3
 .\}
 \fB\-\-raw\fR
-.sp
 By default,
 \fBmysqlbinlog\fR
 reads binary log files and writes events in text format\&. The
@@ -1031,7 +1011,6 @@ the section called \(lqUSING MYSQLBINLOG TO BACK UP BINARY LOG FILES\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-read\-from\-remote\-master=\fR\fB\fItype\fR\fR
-.sp
 Read binary logs from a MySQL server with the
 COM_BINLOG_DUMP
 or
@@ -1069,7 +1048,6 @@ privilege is required to use this option\&.
 .\}
 \fB\-\-read\-from\-remote\-server\fR,
 \fB\-R\fR
-.sp
 Read the binary log from a MySQL server rather than reading a local log file\&. This option requires that the remote server be running\&. It works only for binary log files on the remote server, not relay log files\&.
 .sp
 The connection parameter options are used with this option or the
@@ -1100,7 +1078,6 @@ This option is like
 .\}
 \fB\-\-result\-file=\fR\fB\fIname\fR\fR,
 \fB\-r \fR\fB\fIname\fR\fR
-.sp
 Without the
 \fB\-\-raw\fR
 option, this option indicates the file to which
@@ -1122,7 +1099,6 @@ option value is treated as a prefix that modifies output file names\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-secure\-auth\fR
-.sp
 Do not send passwords to the server in old (pre\-4\&.1) format\&. This prevents connections except for servers that use the newer password format\&. This option is enabled by default; use
 \fB\-\-skip\-secure\-auth\fR
 to disable it\&. This option was added in MySQL 5\&.6\&.17\&.
@@ -1168,7 +1144,6 @@ This option is deprecated and will be removed in a future release\&. As of MySQL
 .IP \(bu 2.3
 .\}
 \fB\-\-server\-id=\fR\fB\fIid\fR\fR
-.sp
 Display only those events created by the server having the given server ID\&.
 .RE
 .sp
@@ -1181,7 +1156,6 @@ Display only those events created by the server having the given server ID\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-server\-id\-bits=\fR\fB\fIN\fR\fR
-.sp
 Use only the first
 \fIN\fR
 bits of the
@@ -1208,7 +1182,6 @@ supplied with the NDB Cluster distribution, or built from the NDB Cluster source
 .IP \(bu 2.3
 .\}
 \fB\-\-set\-charset=\fR\fB\fIcharset_name\fR\fR
-.sp
 Add a
 SET NAMES \fIcharset_name\fR
 statement to the output to specify the character set to be used for processing log files\&.
@@ -1223,7 +1196,6 @@ statement to the output to specify the character set to be used for processing l
 .IP \(bu 2.3
 .\}
 \fB\-\-shared\-memory\-base\-name=\fR\fB\fIname\fR\fR
-.sp
 On Windows, the shared\-memory name to use for connections made using shared memory to a local server\&. The default value is
 MYSQL\&. The shared\-memory name is case\-sensitive\&.
 .sp
@@ -1242,7 +1214,6 @@ system variable enabled to support shared\-memory connections\&.
 .\}
 \fB\-\-short\-form\fR,
 \fB\-s\fR
-.sp
 Display only the statements contained in the log, without any extra information or row\-based events\&. This is for testing only, and should not be used in production systems\&.
 .RE
 .sp
@@ -1255,7 +1226,6 @@ Display only the statements contained in the log, without any extra information 
 .IP \(bu 2.3
 .\}
 \fB\-\-skip\-gtids[=(true|false)]\fR
-.sp
 Do not display any GTIDs in the output\&. This is needed when writing to a dump file from one or more binary logs containing GTIDs, as shown in this example:
 .sp
 .if n \{\
@@ -1283,7 +1253,6 @@ The use of this option is otherwise not normally recommended in production\&.
 .\}
 \fB\-\-socket=\fR\fB\fIpath\fR\fR,
 \fB\-S \fR\fB\fIpath\fR\fR
-.sp
 For connections to
 localhost, the Unix socket file to use, or, on Windows, the name of the named pipe to use\&.
 .sp
@@ -1303,7 +1272,6 @@ system variable\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-ssl*\fR
-.sp
 Options that begin with
 \fB\-\-ssl\fR
 specify whether to connect to the server using SSL and indicate where to find SSL keys and certificates\&. See
@@ -1319,7 +1287,6 @@ the section called \(lqCommand Options for Encrypted Connections\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-start\-datetime=\fR\fB\fIdatetime\fR\fR
-.sp
 Start reading the binary log at the first event having a timestamp equal to or later than the
 \fIdatetime\fR
 argument\&. The
@@ -1355,7 +1322,6 @@ Section\ \&7.3, \(lqExample Backup and Recovery Strategy\(rq\&.
 .\}
 \fB\-\-start\-position=\fR\fB\fIN\fR\fR,
 \fB\-j \fR\fB\fIN\fR\fR
-.sp
 Start reading the binary log at the first event having a position equal to or greater than
 \fIN\fR\&. This option applies to the first log file named on the command line\&.
 .sp
@@ -1372,7 +1338,6 @@ Section\ \&7.3, \(lqExample Backup and Recovery Strategy\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-stop\-datetime=\fR\fB\fIdatetime\fR\fR
-.sp
 Stop reading the binary log at the first event having a timestamp equal to or later than the
 \fIdatetime\fR
 argument\&. This option is useful for point\-in\-time recovery\&. See the description of the
@@ -1394,7 +1359,6 @@ Section\ \&7.3, \(lqExample Backup and Recovery Strategy\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-stop\-never\fR
-.sp
 This option is used with
 \fB\-\-read\-from\-remote\-server\fR\&. It tells
 \fBmysqlbinlog\fR
@@ -1422,7 +1386,6 @@ to maintain a continuous text display of log events as the server generates them
 .IP \(bu 2.3
 .\}
 \fB\-\-stop\-never\-slave\-server\-id=\fR\fB\fIid\fR\fR
-.sp
 With
 \fB\-\-stop\-never\fR,
 \fBmysqlbinlog\fR
@@ -1443,7 +1406,6 @@ the section called \(lqSPECIFYING THE MYSQLBINLOG SERVER ID\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-stop\-position=\fR\fB\fIN\fR\fR
-.sp
 Stop reading the binary log at the first event having a position equal to or greater than
 \fIN\fR\&. This option applies to the last log file named on the command line\&.
 .sp
@@ -1461,7 +1423,6 @@ Section\ \&7.3, \(lqExample Backup and Recovery Strategy\(rq\&.
 .\}
 \fB\-\-to\-last\-log\fR,
 \fB\-t\fR
-.sp
 Do not stop at the end of the requested binary log from a MySQL server, but rather continue printing until the end of the last binary log\&. If you send the output to the same MySQL server, this may lead to an endless loop\&. This option requires
 \fB\-\-read\-from\-remote\-server\fR\&.
 .RE
@@ -1476,7 +1437,6 @@ Do not stop at the end of the requested binary log from a MySQL server, but rath
 .\}
 \fB\-\-user=\fR\fB\fIuser_name\fR\fR,
 \fB\-u \fR\fB\fIuser_name\fR\fR
-.sp
 The user name of the MySQL account to use when connecting to a remote server\&.
 .RE
 .sp
@@ -1490,7 +1450,6 @@ The user name of the MySQL account to use when connecting to a remote server\&.
 .\}
 \fB\-\-verbose\fR,
 \fB\-v\fR
-.sp
 Reconstruct row events and display them as commented SQL statements\&. If this option is given twice (by passing in either "\-vv" or "\-\-verbose \-\-verbose"), the output includes comments to indicate column data types and some metadata, and row query log events if so configured\&.
 .sp
 For examples that show the effect of
@@ -1511,7 +1470,6 @@ the section called \(lqMYSQLBINLOG ROW EVENT DISPLAY\(rq\&.
 .\}
 \fB\-\-verify\-binlog\-checksum\fR,
 \fB\-c\fR
-.sp
 Verify checksums in binary log files\&.
 .RE
 .sp
@@ -1525,7 +1483,6 @@ Verify checksums in binary log files\&.
 .\}
 \fB\-\-version\fR,
 \fB\-V\fR
-.sp
 Display version information and exit\&.
 .sp
 Prior to MySQL 5\&.6\&.11, the
@@ -1674,7 +1631,7 @@ statements (that is, it adds
 LOCAL), both the client and the server that you use to process the statements must be configured with the
 LOCAL
 capability enabled\&. See
-Section\ \&6.1.6, \(lqSecurity Issues with LOAD DATA LOCAL\(rq\&.
+Section\ \&6.1.6, \(lqSecurity Considerations for LOAD DATA LOCAL\(rq\&.
 .if n \{\
 .sp
 .\}
@@ -2744,7 +2701,7 @@ specifies a nonzero server ID\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
