--- a/man/perror.1
+++ b/man/perror.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBperror\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBPERROR\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBPERROR\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -127,7 +127,6 @@ supports the following options\&.
 \fB\-\-info\fR,
 \fB\-I\fR,
 \fB\-?\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -140,7 +139,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-ndb\fR
-.sp
 Print the error message for an NDB Cluster error code\&.
 .RE
 .sp
@@ -154,7 +152,6 @@ Print the error message for an NDB Cluster error code\&.
 .\}
 \fB\-\-silent\fR,
 \fB\-s\fR
-.sp
 Silent mode\&. Print only the error message\&.
 .RE
 .sp
@@ -168,7 +165,6 @@ Silent mode\&. Print only the error message\&.
 .\}
 \fB\-\-verbose\fR,
 \fB\-v\fR
-.sp
 Verbose mode\&. Print error code and message\&. This is the default behavior\&.
 .RE
 .sp
@@ -182,13 +178,12 @@ Verbose mode\&. Print error code and message\&. This is the default behavior\&.
 .\}
 \fB\-\-version\fR,
 \fB\-V\fR
-.sp
 Display version information and exit\&.
 .RE
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
