--- a/man/mysql_convert_table_format.1
+++ b/man/mysql_convert_table_format.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysql_convert_table_format\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQL_CONVERT_TABLE_FORMAT\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQL_CONVERT_TABLE_FORMAT\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -91,7 +91,6 @@ supports the options described in the following list\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-help\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -104,7 +103,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-force\fR
-.sp
 Continue even if errors occur\&.
 .RE
 .sp
@@ -117,7 +115,6 @@ Continue even if errors occur\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-host=\fR\fB\fIhost_name\fR\fR
-.sp
 Connect to the MySQL server on the given host\&.
 .RE
 .sp
@@ -130,7 +127,6 @@ Connect to the MySQL server on the given host\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-password=\fR\fB\fIpassword\fR\fR
-.sp
 The password to use when connecting to the server\&. The password value is not optional for this option, unlike for other MySQL programs\&.
 .sp
 Specifying a password on the command line should be considered insecure\&. To avoid giving the password on the command line, use an option file\&. See
@@ -146,7 +142,6 @@ Section\ \&6.1.2.1, \(lqEnd-User Guidelines for Password Security\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-port=\fR\fB\fIport_num\fR\fR
-.sp
 The TCP/IP port number to use for the connection\&.
 .RE
 .sp
@@ -159,7 +154,6 @@ The TCP/IP port number to use for the connection\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-socket=\fR\fB\fIpath\fR\fR
-.sp
 For connections to
 localhost, the Unix socket file to use\&.
 .RE
@@ -173,7 +167,6 @@ localhost, the Unix socket file to use\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-type=\fR\fB\fIengine_name\fR\fR
-.sp
 Specify the storage engine that the tables should be converted to use\&. The default is
 MyISAM
 if this option is not given\&.
@@ -188,7 +181,6 @@ if this option is not given\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-user=\fR\fB\fIuser_name\fR\fR
-.sp
 The MySQL user name to use when connecting to the server\&.
 .RE
 .sp
@@ -201,7 +193,6 @@ The MySQL user name to use when connecting to the server\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-verbose\fR
-.sp
 Verbose mode\&. Print more information about what the program does\&.
 .RE
 .sp
@@ -214,13 +205,12 @@ Verbose mode\&. Print more information about what the program does\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-version\fR
-.sp
 Display version information and exit\&.
 .RE
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
