--- a/man/mysql_plugin.1
+++ b/man/mysql_plugin.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysql_plugin\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQL_PLUGIN\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQL_PLUGIN\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -175,7 +175,6 @@ Section\ \&4.2.2.2, \(lqUsing Option Files\(rq\&.
 .\}
 \fB\-\-help\fR,
 \fB\-?\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -189,7 +188,6 @@ Display a help message and exit\&.
 .\}
 \fB\-\-basedir=\fR\fB\fIdir_name\fR\fR,
 \fB\-b \fR\fB\fIdir_name\fR\fR
-.sp
 The server base directory\&.
 .RE
 .sp
@@ -203,7 +201,6 @@ The server base directory\&.
 .\}
 \fB\-\-datadir=\fR\fB\fIdir_name\fR\fR,
 \fB\-d \fR\fB\fIdir_name\fR\fR
-.sp
 The server data directory\&.
 .RE
 .sp
@@ -217,7 +214,6 @@ The server data directory\&.
 .\}
 \fB\-\-my\-print\-defaults=\fR\fB\fIfile_name\fR\fR,
 \fB\-b \fR\fB\fIfile_name\fR\fR
-.sp
 The path to the
 \fBmy_print_defaults\fR
 program\&.
@@ -233,7 +229,6 @@ program\&.
 .\}
 \fB\-\-mysqld=\fR\fB\fIfile_name\fR\fR,
 \fB\-b \fR\fB\fIfile_name\fR\fR
-.sp
 The path to the
 \fBmysqld\fR
 server\&.
@@ -249,7 +244,6 @@ server\&.
 .\}
 \fB\-\-no\-defaults\fR,
 \fB\-p\fR
-.sp
 Do not read values from the configuration file\&. This option enables an administrator to skip reading defaults from the configuration file\&.
 .sp
 With
@@ -267,7 +261,6 @@ With
 .\}
 \fB\-\-plugin\-dir=\fR\fB\fIdir_name\fR\fR,
 \fB\-p \fR\fB\fIdir_name\fR\fR
-.sp
 The server plugin directory\&.
 .RE
 .sp
@@ -281,7 +274,6 @@ The server plugin directory\&.
 .\}
 \fB\-\-plugin\-ini=\fR\fB\fIfile_name\fR\fR,
 \fB\-i \fR\fB\fIfile_name\fR\fR
-.sp
 The
 \fBmysql_plugin\fR
 configuration file\&. Relative path names are interpreted relative to the current directory\&. If this option is not given, the default is
@@ -303,7 +295,6 @@ argument on the command line\&.
 .\}
 \fB\-\-print\-defaults\fR,
 \fB\-P\fR
-.sp
 Display the default values from the configuration file\&. This option causes
 \fBmysql_plugin\fR
 to print the defaults for
@@ -327,7 +318,6 @@ With
 .\}
 \fB\-\-verbose\fR,
 \fB\-v\fR
-.sp
 Verbose mode\&. Print more information about what the program does\&. This option can be used multiple times to increase the amount of information\&.
 .RE
 .sp
@@ -341,13 +331,12 @@ Verbose mode\&. Print more information about what the program does\&. This optio
 .\}
 \fB\-\-version\fR,
 \fB\-V\fR
-.sp
 Display version information and exit\&.
 .RE
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
