--- a/man/mysqlaccess.1
+++ b/man/mysqlaccess.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysqlaccess\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQLACCESS\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQLACCESS\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -127,7 +127,6 @@ supports the options shown in the following table\&.
 .\}
 \fB\-\-help\fR,
 \fB\-?\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -141,7 +140,6 @@ Display a help message and exit\&.
 .\}
 \fB\-\-brief\fR,
 \fB\-b\fR
-.sp
 Generate reports in single\-line tabular format\&.
 .RE
 .sp
@@ -154,7 +152,6 @@ Generate reports in single\-line tabular format\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-commit\fR
-.sp
 Copy the new access privileges from the temporary tables to the original grant tables\&. The grant tables must be flushed for the new privileges to take effect\&. (For example, execute a
 \fBmysqladmin reload\fR
 command\&.)
@@ -169,7 +166,6 @@ command\&.)
 .IP \(bu 2.3
 .\}
 \fB\-\-copy\fR
-.sp
 Reload the temporary grant tables from original ones\&.
 .RE
 .sp
@@ -183,7 +179,6 @@ Reload the temporary grant tables from original ones\&.
 .\}
 \fB\-\-db=\fR\fB\fIdb_name\fR\fR,
 \fB\-d \fR\fB\fIdb_name\fR\fR
-.sp
 Specify the database name\&.
 .RE
 .sp
@@ -196,7 +191,6 @@ Specify the database name\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-debug=\fR\fB\fIN\fR\fR
-.sp
 Specify the debug level\&.
 \fIN\fR
 can be an integer from 0 to 3\&.
@@ -217,7 +211,6 @@ built using this option\&.
 .\}
 \fB\-\-host=\fR\fB\fIhost_name\fR\fR,
 \fB\-h \fR\fB\fIhost_name\fR\fR
-.sp
 The host name to use in the access privileges\&.
 .RE
 .sp
@@ -230,7 +223,6 @@ The host name to use in the access privileges\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-howto\fR
-.sp
 Display some examples that show how to use
 \fBmysqlaccess\fR\&.
 .RE
@@ -244,7 +236,6 @@ Display some examples that show how to use
 .IP \(bu 2.3
 .\}
 \fB\-\-old_server\fR
-.sp
 Assume that the server is an old MySQL server (before MySQL 3\&.21) that does not yet know how to handle full
 WHERE
 clauses\&.
@@ -260,7 +251,6 @@ clauses\&.
 .\}
 \fB\-\-password[=\fR\fB\fIpassword\fR\fR\fB]\fR,
 \fB\-p[\fR\fB\fIpassword\fR\fR\fB]\fR
-.sp
 The password to use when connecting to the server\&. If you omit the
 \fIpassword\fR
 value following the
@@ -284,7 +274,6 @@ Section\ \&6.1.2.1, \(lqEnd-User Guidelines for Password Security\(rq\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-plan\fR
-.sp
 Display suggestions and ideas for future releases\&.
 .RE
 .sp
@@ -297,7 +286,6 @@ Display suggestions and ideas for future releases\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-preview\fR
-.sp
 Show the privilege differences after making changes to the temporary grant tables\&.
 .RE
 .sp
@@ -310,7 +298,6 @@ Show the privilege differences after making changes to the temporary grant table
 .IP \(bu 2.3
 .\}
 \fB\-\-relnotes\fR
-.sp
 Display the release notes\&.
 .RE
 .sp
@@ -324,7 +311,6 @@ Display the release notes\&.
 .\}
 \fB\-\-rhost=\fR\fB\fIhost_name\fR\fR,
 \fB\-H \fR\fB\fIhost_name\fR\fR
-.sp
 Connect to the MySQL server on the given host\&.
 .RE
 .sp
@@ -337,7 +323,6 @@ Connect to the MySQL server on the given host\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-rollback\fR
-.sp
 Undo the most recent changes to the temporary grant tables\&.
 .RE
 .sp
@@ -351,7 +336,6 @@ Undo the most recent changes to the temporary grant tables\&.
 .\}
 \fB\-\-spassword[=\fR\fB\fIpassword\fR\fR\fB]\fR,
 \fB\-P[\fR\fB\fIpassword\fR\fR\fB]\fR
-.sp
 The password to use when connecting to the server as the superuser\&. If you omit the
 \fIpassword\fR
 value following the
@@ -376,7 +360,6 @@ Section\ \&6.1.2.1, \(lqEnd-User Guidelines for Password Security\(rq\&.
 .\}
 \fB\-\-superuser=\fR\fB\fIuser_name\fR\fR,
 \fB\-U \fR\fB\fIuser_name\fR\fR
-.sp
 Specify the user name for connecting as the superuser\&.
 .RE
 .sp
@@ -390,7 +373,6 @@ Specify the user name for connecting as the superuser\&.
 .\}
 \fB\-\-table\fR,
 \fB\-t\fR
-.sp
 Generate reports in table format\&.
 .RE
 .sp
@@ -404,7 +386,6 @@ Generate reports in table format\&.
 .\}
 \fB\-\-user=\fR\fB\fIuser_name\fR\fR,
 \fB\-u \fR\fB\fIuser_name\fR\fR
-.sp
 The user name to use in the access privileges\&.
 .RE
 .sp
@@ -418,7 +399,6 @@ The user name to use in the access privileges\&.
 .\}
 \fB\-\-version\fR,
 \fB\-v\fR
-.sp
 Display version information and exit\&.
 .RE
 .PP
@@ -449,7 +429,7 @@ error will occur when you run
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
