--- a/man/mysqld_multi.1
+++ b/man/mysqld_multi.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBmysqld_multi\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBMYSQLD_MULTI\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBMYSQLD_MULTI\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -227,7 +227,6 @@ supports the following options\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-help\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -240,7 +239,6 @@ Display a help message and exit\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-example\fR
-.sp
 Display a sample option file\&.
 .RE
 .sp
@@ -253,7 +251,6 @@ Display a sample option file\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-log=\fR\fB\fIfile_name\fR\fR
-.sp
 Specify the name of the log file\&. If the file exists, log output is appended to it\&.
 .RE
 .sp
@@ -266,7 +263,6 @@ Specify the name of the log file\&. If the file exists, log output is appended t
 .IP \(bu 2.3
 .\}
 \fB\-\-mysqladmin=\fR\fB\fIprog_name\fR\fR
-.sp
 The
 \fBmysqladmin\fR
 binary to be used to stop servers\&.
@@ -281,7 +277,6 @@ binary to be used to stop servers\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-mysqld=\fR\fB\fIprog_name\fR\fR
-.sp
 The
 \fBmysqld\fR
 binary to be used\&. You can specify
@@ -321,7 +316,6 @@ ledir  = /opt/local/mysql/libexec
 .IP \(bu 2.3
 .\}
 \fB\-\-no\-log\fR
-.sp
 Print log information to
 stdout
 rather than to the log file\&. By default, output goes to the log file\&.
@@ -336,7 +330,6 @@ rather than to the log file\&. By default, output goes to the log file\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-password=\fR\fB\fIpassword\fR\fR
-.sp
 The password of the MySQL account to use when invoking
 \fBmysqladmin\fR\&. The password value is not optional for this option, unlike for other MySQL programs\&.
 .RE
@@ -350,7 +343,6 @@ The password of the MySQL account to use when invoking
 .IP \(bu 2.3
 .\}
 \fB\-\-silent\fR
-.sp
 Silent mode; disable warnings\&.
 .RE
 .sp
@@ -363,7 +355,6 @@ Silent mode; disable warnings\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-tcp\-ip\fR
-.sp
 Connect to each MySQL server through the TCP/IP port instead of the Unix socket file\&. (If a socket file is missing, the server might still be running, but accessible only through the TCP/IP port\&.) By default, connections are made using the Unix socket file\&. This option affects
 stop
 and
@@ -380,7 +371,6 @@ operations\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-user=\fR\fB\fIuser_name\fR\fR
-.sp
 The user name of the MySQL account to use when invoking
 \fBmysqladmin\fR\&.
 .RE
@@ -394,7 +384,6 @@ The user name of the MySQL account to use when invoking
 .IP \(bu 2.3
 .\}
 \fB\-\-verbose\fR
-.sp
 Be more verbose\&.
 .RE
 .sp
@@ -407,7 +396,6 @@ Be more verbose\&.
 .IP \(bu 2.3
 .\}
 \fB\-\-version\fR
-.sp
 Display version information and exit\&.
 .RE
 .PP
@@ -627,7 +615,7 @@ Section\ \&4.2.2.2, \(lqUsing Option Files\(rq\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
