--- a/man/ndb_print_frag_file.1
+++ b/man/ndb_print_frag_file.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_print_frag_file\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBNDB_PRINT_FRAG_FILE\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBNDB_PRINT_FRAG_FILE\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -62,7 +62,7 @@ or
 2\&. Each fragment file contains records of the fragments belonging to each
 NDB
 table\&. For more information about cluster fragment files, see
-\m[blue]\fBNDB Cluster Data Node File System Directory Files\fR\m[]\&\s-2\u[1]\d\s+2\&.
+\m[blue]\fBNDB Cluster Data Node File System Directory\fR\m[]\&\s-2\u[1]\d\s+2\&.
 .PP
 Like
 \fBndb_print_backup_file\fR,
@@ -119,7 +119,7 @@ This program was added in MySQL NDB Cluster 7\&.4\&.3\&. (Bug #74594, Bug #19898
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
@@ -129,7 +129,7 @@ You should have received a copy of the GNU General Public License along with the
 .sp
 .SH "NOTES"
 .IP " 1." 4
-NDB Cluster Data Node File System Directory Files
+NDB Cluster Data Node File System Directory
 .RS 4
 \%https://dev.mysql.com/doc/ndb-internals/en/ndb-internals-ndbd-filesystemdir-files.html
 .RE
