--- a/man/resolve_stack_dump.1
+++ b/man/resolve_stack_dump.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBresolve_stack_dump\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 03/06/2020
+.\"      Date: 06/02/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.6
 .\"  Language: English
 .\"
-.TH "\FBRESOLVE_STACK_DUMP\FR" "1" "03/06/2020" "MySQL 5\&.6" "MySQL Database System"
+.TH "\FBRESOLVE_STACK_DUMP\FR" "1" "06/02/2020" "MySQL 5\&.6" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -69,7 +69,6 @@ supports the following options\&.
 .\}
 \fB\-\-help\fR,
 \fB\-h\fR
-.sp
 Display a help message and exit\&.
 .RE
 .sp
@@ -83,7 +82,6 @@ Display a help message and exit\&.
 .\}
 \fB\-\-numeric\-dump\-file=\fR\fB\fIfile_name\fR\fR,
 \fB\-n \fR\fB\fIfile_name\fR\fR
-.sp
 Read the stack trace from the given file\&.
 .RE
 .sp
@@ -97,7 +95,6 @@ Read the stack trace from the given file\&.
 .\}
 \fB\-\-symbols\-file=\fR\fB\fIfile_name\fR\fR,
 \fB\-s \fR\fB\fIfile_name\fR\fR
-.sp
 Use the given symbols file\&.
 .RE
 .sp
@@ -111,7 +108,6 @@ Use the given symbols file\&.
 .\}
 \fB\-\-version\fR,
 \fB\-V\fR
-.sp
 Display version information and exit\&.
 .RE
 .PP
@@ -120,7 +116,7 @@ Section\ \&24.5.1.5, \(lqUsing a Stack Trace\(rq\&.
 .SH "COPYRIGHT"
 .br
 .PP
-Copyright \(co 1997, 2020, Oracle and/or its affiliates. All rights reserved.
+Copyright \(co 1997, 2020, Oracle and/or its affiliates.
 .PP
 This documentation is free software; you can redistribute it and/or modify it only under the terms of the GNU General Public License as published by the Free Software Foundation; version 2 of the License.
 .PP
